## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

anjuta_datadir = $(anjuta_data_dir)
anjuta_profiledir = $(anjuta_data_dir)/profiles

anjuta_data_DATA = welcome.txt

anjuta_profile_DATA = default.profile

EXTRA_DIST = $(anjuta_data_DATA) $(anjuta_profile_DATA)

-include $(top_srcdir)/git.mk
