## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

SUBDIRS = templates

anjuta_datadir = $(anjuta_data_dir)
anjuta_profiledir = $(anjuta_data_dir)/profiles

dist_anjuta_data_DATA = welcome.txt

dist_anjuta_profile_DATA = default.profile

-include $(top_srcdir)/git.mk
