## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

anjuta_docdir = $(prefix)/@NO_PREFIX_PACKAGE_DOC_DIR@

anjuta_doc_DATA = \
	ScintillaDoc.html

EXTRA_DIST = $(anjuta_doc_DATA)
