## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

anjuta_docdir = $(datadir)/doc/anjuta

anjuta_doc_DATA = \
	ScintillaDoc.html

man_MANS = \
	anjuta.1 \
	anjuta_launcher.1

EXTRA_DIST = $(anjuta_doc_DATA) $(man_MANS)

-include $(top_srcdir)/git.mk
