## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjtua Project configuration

anjuta_helpdir = $(prefix)/@NO_PREFIX_PACKAGE_HELP_DIR@/C

anjuta_help_DATA = \
	anjuta_logo.jpg\
	arguments.jpg\
	brk_add.jpg\
	brk_dlg.jpg\
	brk_edit.jpg\
	browse_toolbar.jpg\
	configure_dlg.jpg\
	defines.jpg\
	evaluate.jpg\
	find_files.jpg\
	find_replace.jpg\
	find_text.jpg\
	frame.jpg\
	includes.jpg\
	index.html\
	index2.html\
	inspect.jpg\
	lib_paths.jpg\
	libraries.jpg\
	menu_detached.jpg\
	message_win.jpg\
	open_file.jpg\
	optimizations.jpg\
	other_opts.jpg\
	page00.html\
	page01.html\
	page02.html\
	page03.html\
	page04.html\
	page05.html\
	page06.html\
	page07.html\
	page08.html\
	page09.html\
	page10.html\
	page100.html\
	page104.html\
	page11.html\
	page110.html\
	page111.html\
	page112.html\
	page113.html\
	page114.html\
	page115.html\
	page12.html\
	page13.html\
	page14.html\
	page15.html\
	page16.html\
	page17.html\
	page18.html\
	page19.html\
	page20.html\
	page21.html\
	page22.html\
	page23.html\
	page24.html\
	page25.html\
	page26.html\
	page27.html\
	page28.html\
	page29.html\
	page30.html\
	page31.html\
	page32.html\
	page33.html\
	page34.html\
	project_info.jpg\
	project_win.jpg\
	replace_text.jpg\
	scrshot.jpg\
	signal_mod.jpg\
	signals.jpg\
	stack.jpg\
	supports.jpg\
	topic.dat\
	warnings.jpg\
	watch.jpg\
	watch_add.jpg

EXTRA_DIST = $(anjuta_help_DATA)
