## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjtua Project configuration

anjuta_helpdir = $(prefix)/@NO_PREFIX_PACKAGE_HELP_DIR@/C

anjuta_help_DATA = \
	topic.dat

EXTRA_DIST = $(anjuta_help_DATA)
